--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/agusslam/nodejs_mongodb_user_jwt#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "crypto-js": "^4.1.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
